k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amss
  labels:
    app.kubernetes.io/part-of: amss
